--- a/client/style.css
+++ b/client/style.css
@@ -32,7 +32,7 @@ body {
   font-size: 36px;
   text-align: center;
   padding: 20px;
-  border: 2px solid #b78846;
+  border: 2px solid #22D2A0;
   margin-top: 20px;
 }
 
