some changes done

--- a/client/style.css
+++ b/client/style.css
@@ -21,10 +21,13 @@ body {
   align-items: center;
   justify-content: space-between;
 }
+ul{
+  color: darksalmon;
+}
 .header {
   
    background: rgb(122,220,180);
-   background: linear-gradient(135deg,rgb(122,220,180) 0%,rgb(0,208,130) 100%);
+   background: linear-gradient(135deg,rgb(122,220,180) 0%,rgb(0, 217, 255) 100%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
   
