--- a/client/style.css
+++ b/client/style.css
@@ -21,7 +21,12 @@ body {
   align-items: center;
   justify-content: space-between;
 }
-
+.header{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 h2 {
   
    background: rgb(122,220,180);
