--- a/client/style.css
+++ b/client/style.css
@@ -25,7 +25,7 @@ body {
 h2 {
   font-family: 'Alegreya Sans';
   font-style: normal;
-  font-weight: 500;
+  font-weight: bolder;
   font-size: 40px;
   line-height: 48px;
   display: flex;
